crates/wolf_lex/tests/snapshots/diagnostics__e0101_hex.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: E0101,
        severity: Error,
        message: "a `\\x` escape needs exactly two hex digits, like `\\x7f`",
        primary: LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 10,
                hi: 13,
            },
            label: "",
        },
        secondary: [],
        notes: [
            "the escapes wolf understands are `\\n`, `\\t`, `\\r`, `\\0`, `\\\\`, `\\\"`, `\\xNN`, and `\\u{…}`. For a literal backslash, write `\\\\`; for text with no escapes at all, use a raw string `r\"…\"`.",
        ],
        suggestions: [],
    },
]
