crates/wolf_lex/tests/snapshots/diagnostics__e0101_unknown.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: "E0101",
        severity: Error,
        span: Span {
            file: FileId(
                0,
            ),
            lo: 10,
            hi: 12,
        },
        message: "unknown escape `\\q`",
        notes: [],
    },
]
