crates/wolf_lex/tests/snapshots/diagnostics__e0102_eol.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: E0102,
        severity: Error,
        message: "this string never closes",
        primary: LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 8,
                hi: 12,
            },
            label: "it opens here and runs to the end of the line",
        },
        secondary: [],
        notes: [
            "a `\"…\"` string must close before the line ends. For text that spans lines, use a multiline `\"\"\"` string.",
        ],
        suggestions: [
            Suggestion {
                message: "close the string before the line ends",
                edits: [
                    (
                        Span {
                            file: FileId(
                                0,
                            ),
                            lo: 12,
                            hi: 12,
                        },
                        "\"",
                    ),
                ],
                applicability: Maybe,
            },
        ],
    },
]
