crates/wolf_lex/tests/snapshots/diagnostics__e0102_multiline_eof.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: "E0102",
        severity: Error,
        span: Span {
            file: FileId(
                0,
            ),
            lo: 8,
            hi: 18,
        },
        message: "unterminated string literal at end of file",
        notes: [],
    },
]
