crates/wolf_lex/tests/snapshots/diagnostics__e0103.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: "E0103",
        severity: Error,
        span: Span {
            file: FileId(
                0,
            ),
            lo: 11,
            hi: 15,
        },
        message: "content after the opening `\"\"\"` must start on the next line",
        notes: [
            (
                Span {
                    file: FileId(
                        0,
                    ),
                    lo: 8,
                    hi: 11,
                },
                "the multiline literal opens here",
            ),
        ],
    },
]
