crates/wolf_lex/tests/snapshots/diagnostics__e0104.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: E0104,
        severity: Error,
        message: "this line starts left of the string's margin",
        primary: LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 12,
                hi: 14,
            },
            label: "the line starts here",
        },
        secondary: [
            LabeledSpan {
                span: Span {
                    file: FileId(
                        0,
                    ),
                    lo: 18,
                    hi: 22,
                },
                label: "the margin is set here",
            },
        ],
        notes: [
            "the whitespace before the closing `\"\"\"` is the margin stripped from every content line. Indent this line at least that far, or move the closing `\"\"\"` left.",
        ],
        suggestions: [],
    },
]
