crates/wolf_lex/tests/snapshots/diagnostics__e0105.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: E0105,
        severity: Error,
        message: "this line's margin mixes tabs and spaces differently from the closing `\"\"\"`",
        primary: LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 12,
                hi: 16,
            },
            label: "the mismatch starts here",
        },
        secondary: [
            LabeledSpan {
                span: Span {
                    file: FileId(
                        0,
                    ),
                    lo: 20,
                    hi: 24,
                },
                label: "the margin is set here",
            },
        ],
        notes: [
            "wolf compares the margin byte-for-byte, never by visual width. Re-indent this line with the same tab/space mix as the closing `\"\"\"`'s line.",
        ],
        suggestions: [],
    },
]
