crates/wolf_lex/tests/snapshots/diagnostics__e0106.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: E0106,
        severity: Error,
        message: "this part of the file is not valid UTF-8",
        primary: LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 4,
                hi: 6,
            },
            label: "these bytes decode as no character",
        },
        secondary: [],
        notes: [
            "wolf source files are UTF-8 ([gram.lex.source]). Re-save the file as UTF-8; the bytes were skipped so the rest still lexes.",
        ],
        suggestions: [],
    },
]
